--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, labore. Quos voluptate vitae neque laudantium repellat nisi aut doloribus, quibusdam quam accusantium incidunt nemo officiis optio quaerat eveniet velit nulla?</p>
 </div>
